# pier

./: .gitignore  capture.py  pyproject.toml
apps/viewer/app/: routes.ts
apps/viewer/app/components/: condition-comparison.tsx  condition-label.tsx  cost-lens.tsx  data-quality.tsx  forensics-panel.tsx  task-list.tsx
apps/viewer/app/lib/: api.ts  comparison.ts  condition-style.ts  conditions.ts  (+2 more)
experiments/: phase_c_manifest.json
scripts/: reemit_trajectories.py
src/pier/: __init__.py
src/pier/cli/: main.py  view.py
src/pier/environments/: daytona.py  modal.py
src/pier/trial/: capture.py  execution.py  queue.py  sweep.py  trial.py
src/pier/utils/: env.py
src/pier/viewer/: models.py  server.py
tests/: test_capabilities_compose.py  test_capture_command.py  test_capture_disabled_identity.py  test_capture_e2e_integration.py  test_capture_network_allowlist.py  test_capture_slices_integration.py  test_claude_code_agents_mount.py  test_claude_code_allowlist_hook.py  test_claude_code_hermetic_skills.py  test_claude_code_permission_lock.py  test_claude_code_resume.py  test_claude_code_subagent_embedding.py  test_claude_code_subagent_trajectory.py  test_data_notes_endpoint.py  test_enriched_trajectory_endpoint.py  test_evidence_endpoints.py  test_evidence_mode.py  test_gathers_endpoint.py  test_mini_swe_agent_conversion.py  test_model_patch_capture.py  test_network_allowlists.py  test_preflight_tasks.py  test_run_sweep.py  test_sweep_configs.py  test_trial_input_artifacts.py  test_trial_queue_backoff.py
tests/fixtures/enriched_trajectory/: evidence_slice.json
(+24 files in other folders)
