[project]
name = "pier"
version = "0.1.0"
description = "Run CLI coding agents and preserve their raw trajectories"
requires-python = ">=3.12"
dependencies = ["harbor>=0.1.0", "typer>=0.12"]

[project.scripts]
pier = "pier.cli.main:app"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"


[tool.ruff.lint.isort]
known-first-party = ["pier"]


[dependency-groups]
dev = ["ruff>=0.5"]
